--- a/Programmet.tex
+++ b/Programmet.tex
@@ -1,2 +1,4 @@
 \section{Programmet}
 Här berskrivs programmet och hur det används 
+\subsection{Hur fungerar det}
+\subsection{Hur använder man det}
